--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/auth": "^22.4.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@reduxjs/toolkit": "^2.8.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
     "expo": "~53.0.17",
     "expo-build-properties": "^0.14.8",
@@ -35,6 +37,7 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-get-random-values": "^1.11.0",
     "react-native-otp-entry": "^1.8.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
