--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "^5.2.4",
+    "expo-document-picker": "^13.1.6",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "^0.30.10",
