--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "build:android": "npx expo prebuild --clean",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "npx expo run android",
+    "ios": "npx expo run ios",
     "web": "expo start --web"
   },
   "dependencies": {
