--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~53.0.17",
     "expo-build-properties": "^0.14.8",
     "expo-checkbox": "~4.1.4",
+    "expo-clipboard": "^8.0.8",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "^5.2.4",
     "expo-document-picker": "^13.1.6",
