--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.79.5",
     "react-native-css-interop": "^0.1.22",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.6.1",
     "react-native-otp-entry": "^1.8.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.17.4",
