fix onboarding and profile flow

--- a/app.json
+++ b/app.json
@@ -42,10 +42,11 @@
       "@react-native-google-signin/google-signin"
     ],
     "extra": {
-      "BASE_URL": "https://6438d3008397.ngrok-free.app/api",
+      "BASE_URL": "https://1230c75497b8.ngrok-free.app/api",
       "GOOGLE_OAUTH": {
         "EXPO_CLIENT_ID": "597892577631-56tsuva8i2q7kfbpahf1gnkptd8625j1.apps.googleusercontent.com"
       },
+      "GOOGLE_PLACES_API_KEY": "AIzaSyChsHB3yCV-Vj_TgCWAAjehe6td1Gum8Zo",
       "router": {},
       "eas": {
         "projectId": "0a558cc7-d57a-4ceb-894a-455b11b95442"
