--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-document-picker": "^13.1.6",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
+    "expo-location": "^19.0.8",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
