--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formik": "^2.4.6",
     "i": "^0.3.7",
     "libphonenumber-js": "^1.12.10",
+    "lodash": "^4.17.21",
     "nativewind": "^4.1.23",
     "npm": "^11.4.2",
     "react": "19.0.0",
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/lodash": "^4.17.21",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "postcss": "^8.5.6",
