--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-location": "^19.0.8",
+    "expo-notifications": "^0.32.15",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -52,6 +53,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
+    "socket.io-client": "^4.8.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
