--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "i": "^0.3.7",
     "libphonenumber-js": "^1.12.10",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "npm": "^11.4.2",
     "react": "19.0.0",
