--- a/app.json
+++ b/app.json
@@ -43,7 +43,7 @@
       "@react-native-google-signin/google-signin"
     ],
     "extra": {
-      "BASE_URL": "https://93091655cae7.ngrok-free.app/api",
+      "BASE_URL": "https://jumpier-oversqueamishly-avianna.ngrok-free.dev/api",
       "GOOGLE_OAUTH": {
         "EXPO_CLIENT_ID": "597892577631-56tsuva8i2q7kfbpahf1gnkptd8625j1.apps.googleusercontent.com"
       },
